<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/go_to_watched_list_button"-->
<!--        android:icon="@drawable/ic_list_watched"-->
<!--        android:title="@string/watched_list"-->
<!--        android:visible="true"-->
<!--        app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/go_to_watch_list_button"
        android:icon="@drawable/ic_heart_24"
        android:title="@string/to_watch_list"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/now_playing_button"
        android:icon="@drawable/ic_now_playing"
        android:title="@string/now_playing"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/login_button"
        android:icon="@drawable/ic_login"
        android:title="@string/login"
        android:visible="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/account_info"
        android:title="@string/account_info"
        android:visible="true"
        app:showAsAction="never"/>


</menu>