<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray">


    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_yellow"/>

    <TextView
        android:id="@+id/motto_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_logo"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/motto"
        android:textColor="@color/light_gray"/>

    <EditText
        android:id="@+id/email_hint_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/motto_text"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/bumblebee_yellow"
        android:hint="@string/email_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:fontFamily="@font/fira_sans"/>

    <EditText
        android:id="@+id/password_hint_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_hint_txt"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/bumblebee_yellow"
        android:hint="@string/password_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:fontFamily="@font/fira_sans"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_big_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_hint_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/bumblebee_yellow"
        android:padding="13dp"
        android:text="@string/login"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:fontFamily="@font/fira_sans_bold" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_big_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/forgot_password"
        android:textColor="@color/bumblebee_yellow"
        android:fontFamily="@font/fira_sans_medium"/>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_big_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="90dp"
        android:text="@string/register"
        android:textColor="@color/bumblebee_yellow"
        android:fontFamily="@font/fira_sans_medium"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bg"
        android:progress="0"
        android:layout_below="@id/login_big_button"
        android:layout_marginTop="80dp"
        android:visibility="gone"/>

</RelativeLayout>