<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_yellow"/>

    <TextView
        android:id="@+id/motto_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_logo"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/registration_motto"
        android:textColor="@color/light_gray"/>


    <EditText
        android:id="@+id/full_name_reg_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/motto_text"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/bumblebee_yellow"
        android:hint="@string/full_name_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:fontFamily="@font/fira_sans"/>

    <EditText
        android:id="@+id/email_reg_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/full_name_reg_hint"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/bumblebee_yellow"
        android:hint="@string/email_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:fontFamily="@font/fira_sans"/>

    <EditText
        android:id="@+id/password_reg_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_reg_hint"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/bumblebee_yellow"
        android:hint="@string/password_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:fontFamily="@font/fira_sans"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_reg_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/bumblebee_yellow"
        android:padding="13dp"
        android:text="@string/register_user"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:fontFamily="@font/fira_sans_bold"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bg"
        android:progress="0"
        android:layout_below="@id/register_button"
        android:layout_marginTop="80dp"
        android:visibility="gone"/>

</RelativeLayout>