<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/search_layout">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|right"
                android:layout_margin="16dp"
                android:backgroundTint="@color/bumblebee_yellow"
                android:src="@drawable/ic_search_bumblebee_yellow_70opc"
                app:backgroundTint="@color/almost_black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="15dp"
                android:visibility="visible"
                android:layout_marginStart="16dp"
                android:textColor="@color/bumblebee_yellow"
                android:id="@+id/search_edit_text"
                android:backgroundTint="@color/bumblebee_yellow"/>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/popular"
            android:textColor="@color/bumblebee_yellow"
            android:textSize="26sp"
            android:fontFamily="@font/fira_sans_bold"
            android:id="@+id/txt_popular"
            android:layout_below="@+id/search_layout"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/most_popular_movies"
            android:textColor="@color/light_gray"
            android:layout_below="@+id/txt_popular"
            android:id="@+id/most_popular_movies"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_below="@id/most_popular_movies" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/top_rated"
            android:textColor="@color/bumblebee_yellow"
            android:textSize="26sp"
            android:fontFamily="@font/fira_sans_bold"
            android:id="@+id/top_rated_txt"
            android:layout_below="@+id/recyclerViewPopular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/highest_rated_movies"
            android:textColor="@color/light_gray"
            android:id="@+id/highest_rated_movies"
            android:layout_below="@id/top_rated_txt"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTopRated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_below="@id/highest_rated_movies" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/upcoming"
            android:textColor="@color/bumblebee_yellow"
            android:textSize="26sp"
            android:fontFamily="@font/fira_sans_bold"
            android:layout_below="@id/recyclerViewTopRated"
            android:id="@+id/txt_upcoming"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/stay_updated"
            android:textColor="@color/light_gray"
            android:id="@+id/stay_updated"
            android:layout_below="@id/txt_upcoming"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewUpcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_below="@+id/stay_updated"/>

    </RelativeLayout>






</androidx.core.widget.NestedScrollView>