<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@color/dark_gray">

    <ImageView
        android:id="@+id/forgot_password_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_yellow"/>

    <TextView
        android:id="@+id/forgot_password_motto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password_logo"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/forgot_password_motto"
        android:textColor="@color/light_gray"/>

    <EditText
        android:id="@+id/enter_email_editbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:layout_below="@id/forgot_password_motto"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="24sp"
        android:backgroundTint="@color/bumblebee_yellow"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"/>

    <Button
        android:id="@+id/reset_password_big_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_email_editbox"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/bumblebee_yellow"
        android:padding="13dp"
        android:text="@string/reset_password"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:fontFamily="@font/fira_sans_bold" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bg"
        android:progress="0"
        android:layout_below="@id/reset_password_big_button"
        android:layout_marginTop="80dp"
        android:visibility="gone"/>


</RelativeLayout>